test/spec_vectors/unreached-invalid/fail/module_43.wat
(module (func $type-func-value-num-vs-void-after-unreachable (unreachable) (i32.const 1)))